# DEEWALLET

./: .eslintrc.json  .gitignore  AGENTS.md  DESIGN_IMPROVEMENTS.md  README.md  jest.config.js  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
config/: rpc-endpoints.json
deewallet-cpp/: BUILD_GUIDE.md  CMakeLists.txt  README.md  run_with_log.sh  test_CMakeLists.txt  test_decrypt.cpp  vcpkg.json
deewallet-cpp/docs/: BUILD-GUIDE.md  DESIGN_SYSTEM.md  FEATURES-COMPLETE.md  IMPLEMENTATION-COMPLETE.md  PHASE3-COMPLETE.md  README.md  USER-GUIDE.md
deewallet-cpp/resources/: Info.plist
deewallet-cpp/src/: main.cpp  test_keyfile.cpp
deewallet-cpp/src/chains/: BitcoinAdapter.cpp  BitcoinAdapter.h  ChainAdapter.h  EthereumAdapter.cpp  EthereumAdapter.cpp.bak  EthereumAdapter.h  SolanaAdapter.cpp  SolanaAdapter.h  TronAdapter.cpp  TronAdapter.h
deewallet-cpp/src/core/: BIP32.cpp  BIP32.h  BIP39.cpp  BIP39.h  KeyfileManager.cpp  KeyfileManager.h  SecureMemory.cpp  SecureMemory.h  WalletCore.cpp  WalletCore.h
deewallet-cpp/src/rpc/: RPCClient.cpp  RPCClient.h  RPCManager.cpp  RPCManager.h  endpoints.json
deewallet-cpp/src/ui/: AddressBookDialog.cpp  AddressBookDialog.h  ChainDetailScreen.cpp  ChainDetailScreen.h  CreateWalletDialog.cpp  CreateWalletDialog.h  DesignTokens.h  ImportWalletDialog.cpp  ImportWalletDialog.h  LoadingScreen.cpp  LoadingScreen.h  MainWindow.cpp  MainWindow.cpp.bak  MainWindow.h  QRCodeDialog.cpp  QRCodeDialog.h  SendTransactionDialog.cpp  SendTransactionDialog.h  StyleHelper.h  WalletDetailScreen.cpp  WalletDetailScreen.cpp.bak  WalletDetailScreen.h  WelcomeScreen.cpp  WelcomeScreen.h
deewallet-cpp/src/utils/: AddressUtils.cpp  AddressUtils.h  Keccak256.cpp  Keccak256.h  TokenDetector.cpp  TokenDetector.h  TransactionBuilder.cpp  TransactionBuilder.h
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  INSTALLATION.md  QUICK-START.md  README.md  RPC-CONFIGURATION.md  RPC-LIST.md  USAGE.md
docs/research/: cpp_wallet_comprehensive_analysis.md
scripts/: build.sh
src/: main.ts  preload.ts
src/chains/: base.chain.ts  bitcoin.chain.ts  ethereum.chain.ts  solana.chain.ts  tron.chain.ts
src/core/: wallet.core.ts
src/types/: wallet.types.ts
src/ui/: App.tsx  index.html  main.tsx
src/ui/components/: Dashboard.tsx  WelcomeScreen.tsx
src/ui/contexts/: WalletContext.tsx
src/ui/styles/: global.css
src/utils/: keyfile-scanner.ts  rpc-manager.ts
tests/unit/: ethereum.chain.test.ts  wallet.core.test.ts
